@startuml Database

entity User {
   user_id <<PK>>
   --
   email
   name
   password
   is_active
   is_staff (if staff have write access)
}

entity Ingredient { 
  +ingredient_id <<PK>>
+ingredient_document_id <<FK>>
  +supplier_id <<FK>>
  +function_id <<FK>>
  +unit_id <<fk>>
  --
  +name
  +price
  +quantity
  +is_used
}

entity Function {
  +function_id <<PK>>
  --
  +internal_name
}

entity ingredient_document {
  +ingredient_document_id <<PK>>
  +ingredient_id<<fk>>
  --
  +necesarryDocument1
  +necesarryDocument2
  +necesarryDocument3
  etc
}

entity unit {
+ unit_id <<PK>>
--
+name
+abbreviation
+conversion_rate
}
entity supplier {
  +supplier_id <<PK>>
  +supplier_document_id <<FK>>
  --
  +Name
  +Location (might be extended)
  +phone
}

entity supplier_document {
  +suppler_document_id <<PK>>
  +supplier_id <<fk>>
  --
  +necesarryDocument1
  etc
}

entity PIC{
  +PIC_id <<PK>>
  +supplier_id <<FK>>
  --
  +name
  +position
  +email
  +phone
}



supplier ||--o{ Ingredient : has multiple

supplier ||--o| supplier_document : may have

Function ||--o{ Ingredient : have internal code

Ingredient ||--o| ingredient_document : may have

supplier ||--o{ PIC : have multiple PIC

Ingredient }o--|| unit

@enduml



